introduce :key and :slug to routes - NB cant use :title as already taken

--- a/app/views/discussions/_title.html.haml
+++ b/app/views/discussions/_title.html.haml
@@ -4,7 +4,7 @@
       = discussion.title
 
     #edit-discussion-title.hidden
-      = form_tag edit_title_discussion_path, method: :post do |f|
+      = form_tag edit_title_discussion_path(discussion), method: :post do |f|
         = hidden_field_tag 'id'
         .control-group
           = text_field_tag 'title', discussion.title, {id: 'discussion-input', class: 'validate-length limit-150'}
