fix css isse breaking notifications on subscription page

--- a/app/views/groups/subscriptions/new.html.haml
+++ b/app/views/groups/subscriptions/new.html.haml
@@ -10,7 +10,7 @@
   .span7.offset2
     %p
       Groups with a budget typically choose a monthly rate of about
-      %span $2 - $5 per person.
+      %span.nowrap $2 - $5 per person.
     %p
       %em (e.g. business, government, community orgs)
 
