--- a/app/views/groups/public_groups/index.html.haml
+++ b/app/views/groups/public_groups/index.html.haml
@@ -11,7 +11,7 @@
 
   %ul.selector-list.bordered
     - @groups.each do |group|
-      %a{href: group_path(group)}
+      = link_to "/g/#{group.key}/#{group.full_name.parameterize}" do
         %li.selector-item
           .group-name
             = group.full_name
